Use Grid component to finish Weather app

--- a/samples/BlazorNativeWeather/BlazorNativeWeather/MainPage.razor
+++ b/samples/BlazorNativeWeather/BlazorNativeWeather/MainPage.razor
@@ -3,74 +3,115 @@
 <ContentPage>
     <PancakeView BackgroundGradientStartColor="@BackgroundColorConverter.GetColor(CurrentWeather.Temperature, isStart: true)"
                  BackgroundGradientEndColor="@BackgroundColorConverter.GetColor(CurrentWeather.Temperature, isStart: false)">
-        <ScrollView Orientation="@ScrollOrientation.Vertical">
-            <StackLayout>
-                <Label HorizontalOptions="@LayoutOptions.Center"
-                       Text="SEATTLE"
-                       FontSize="@FontSizeUtility.GetFontSize(NamedSize.Large)"
-                       TextColor="@AppResources.MainTextColor" />
-                <Image HorizontalOptions="@LayoutOptions.FillAndExpand"
-                       VerticalOptions="@LayoutOptions.FillAndExpand"
-                       Opacity=".8"
-                       Source="@(new FileImageSource { File = "spaceneedle.png" })"
-                       Margin="@(new Thickness(0,0,0,-80))" />
-                <StackLayout Orientation="@StackOrientation.Horizontal">
-                    <Label FontSize="@AppResources.LabelTemperatureStyle.FontSize"
-                           HorizontalOptions="@AppResources.LabelTemperatureStyle.HorizontalOptions"
-                           Text="@CurrentWeather.Temperature.ToString()"
-                           TextColor="@AppResources.LabelTemperatureStyle.TextColor" />
-                    <Label FontSize="@AppResources.LabelTemperatureStyle.FontSize"
-                           HorizontalOptions="@LayoutOptions.Start"
-                           Text="°F"
-                           TextColor="@AppResources.LabelTemperatureStyle.TextColor" />
-                </StackLayout>
+        <Grid Padding="@(new Thickness(0,44,0,0))"
+              RowSpacing="0">
+            <Layout>
+                <RowDefinition GridUnitType="GridUnitType.Auto" />
+                <RowDefinition GridUnitType="GridUnitType.Star" />
+                <RowDefinition GridUnitType="GridUnitType.Auto" />
+                <RowDefinition GridUnitType="GridUnitType.Auto" />
+                <RowDefinition GridUnitType="GridUnitType.Auto" />
+                <RowDefinition GridUnitType="GridUnitType.Auto" />
+                <RowDefinition GridUnitType="GridUnitType.Auto" />
+            </Layout>
+            <Contents>
+                <GridCell Row="0">
+                    <Label HorizontalOptions="@LayoutOptions.Center"
+                           Text="SEATTLE"
+                           FontSize="@FontSizeUtility.GetFontSize(NamedSize.Large)"
+                           TextColor="@AppResources.MainTextColor" />
+                </GridCell>
 
-                <Label HorizontalOptions="@LayoutOptions.Center"
-                       Text="SUNNY"
-                       FontSize="@FontSizeUtility.GetFontSize(NamedSize.Large)"
-                       TextColor="@AppResources.MainTextColor" />
-                <Label HorizontalOptions="@LayoutOptions.Center"
-                       Text="FRIDAY, SEPTEMBER 13"
-                       FontSize="@FontSizeUtility.GetFontSize(NamedSize.Small)"
-                       TextColor="@AppResources.MainTextColor" />
+                <GridCell Row="1">
+                    <Image HorizontalOptions="@LayoutOptions.FillAndExpand"
+                           VerticalOptions="@LayoutOptions.FillAndExpand"
+                           Opacity=".8"
+                           Source="@(new FileImageSource { File = "spaceneedle.png" })"
+                           Margin="@(new Thickness(0,0,0,-80))" />
+                </GridCell>
 
-                <ScrollView Orientation="@ScrollOrientation.Horizontal">
-                    <StackLayout Orientation="@StackOrientation.Horizontal">
-                        @foreach (var weatherDataItem in CurrentWeather.DataItems)
-                        {
-                            <PancakeView CornerRadius="@(new CornerRadius(20, 20, 20, 0))"
-                                         Padding="8"
-                                         BackgroundGradientStartColor="@Color.FromHex("#98FFFFFF")"
-                                         BackgroundGradientEndColor="@Color.FromHex("#60FFFFFF")"
-                                         BackgroundGradientAngle="315">
-                                <StackLayout Spacing="0"
-                                             VerticalOptions="@LayoutOptions.Center">
-                                    <Label Text="@weatherDataItem.Name"
-                                           FontAttributes="@FontAttributes.Bold"
-                                           FontSize="@FontSizeUtility.GetFontSize(NamedSize.Small)"
-                                           TextColor="@Color.White"
-                                           HorizontalOptions="@LayoutOptions.Center" />
-                                    <StackLayout Orientation="@StackOrientation.Horizontal">
-                                        <Label Text="@weatherDataItem.Value.ToString()"
-                                               TextColor="@Color.White"
+                <GridCell Row="2">
+                    <Grid>
+                        <Layout>
+                            <ColumnDefinition GridUnitType="GridUnitType.Star" />
+                            <ColumnDefinition GridUnitType="GridUnitType.Auto" />
+                            <ColumnDefinition GridUnitType="GridUnitType.Star" />
+                        </Layout>
+                        <Contents>
+                            <GridCell Column="1">
+                                <Label FontSize="@AppResources.LabelTemperatureStyle.FontSize"
+                                       HorizontalOptions="@AppResources.LabelTemperatureStyle.HorizontalOptions"
+                                       Text="@CurrentWeather.Temperature.ToString()"
+                                       TextColor="@AppResources.LabelTemperatureStyle.TextColor" />
+                            </GridCell>
+
+                            <GridCell Column="2">
+                                <Label FontSize="@AppResources.LabelTemperatureStyle.FontSize"
+                                       HorizontalOptions="@LayoutOptions.Start"
+                                       Text="°F"
+                                       TextColor="@AppResources.LabelTemperatureStyle.TextColor" />
+                            </GridCell>
+                        </Contents>
+                    </Grid>
+                </GridCell>
+
+                <GridCell Row="3">
+                    <Label HorizontalOptions="@LayoutOptions.Center"
+                           Text="SUNNY"
+                           FontSize="@FontSizeUtility.GetFontSize(NamedSize.Large)"
+                           TextColor="@AppResources.MainTextColor" />
+                </GridCell>
+
+                <GridCell Row="4">
+                    <Label HorizontalOptions="@LayoutOptions.Center"
+                           Text="FRIDAY, SEPTEMBER 13"
+                           FontSize="@FontSizeUtility.GetFontSize(NamedSize.Small)"
+                           TextColor="@AppResources.MainTextColor" />
+                </GridCell>
+
+                <GridCell Row="5">
+                    <ScrollView Orientation="@ScrollOrientation.Horizontal">
+                        <StackLayout Orientation="@StackOrientation.Horizontal">
+                            @foreach (var weatherDataItem in CurrentWeather.DataItems)
+                            {
+                                <PancakeView CornerRadius="@(new CornerRadius(20, 20, 20, 0))"
+                                             Padding="8"
+                                             BackgroundGradientStartColor="@Color.FromHex("#98FFFFFF")"
+                                             BackgroundGradientEndColor="@Color.FromHex("#60FFFFFF")"
+                                             BackgroundGradientAngle="315">
+                                    <StackLayout Spacing="0"
+                                                 VerticalOptions="@LayoutOptions.Center">
+                                        <Label Text="@weatherDataItem.Name"
+                                               FontAttributes="@FontAttributes.Bold"
                                                FontSize="@FontSizeUtility.GetFontSize(NamedSize.Small)"
+                                               TextColor="@Color.White"
                                                HorizontalOptions="@LayoutOptions.Center" />
-                                        @if (weatherDataItem.Unit != null)
-                                        {
-                                            <Label Text="@weatherDataItem.Unit"
+                                        <StackLayout Orientation="@StackOrientation.Horizontal">
+                                            <Label Text="@weatherDataItem.Value.ToString()"
                                                    TextColor="@Color.White"
-                                                   FontSize="@FontSizeUtility.GetFontSize(NamedSize.Micro)"
+                                                   FontSize="@FontSizeUtility.GetFontSize(NamedSize.Small)"
                                                    HorizontalOptions="@LayoutOptions.Center" />
-                                        }
+                                            @if (weatherDataItem.Unit != null)
+                                            {
+                                                <Label Text="@weatherDataItem.Unit"
+                                                       TextColor="@Color.White"
+                                                       FontSize="@FontSizeUtility.GetFontSize(NamedSize.Micro)"
+                                                       HorizontalOptions="@LayoutOptions.Center" />
+                                            }
+                                        </StackLayout>
                                     </StackLayout>
-                                </StackLayout>
-                            </PancakeView>
-                        }
-                    </StackLayout>
-                </ScrollView>
-                <Button Text="Refresh" OnClick="@OnGetNewWeather" />
-            </StackLayout>
-        </ScrollView>
+                                </PancakeView>
+                            }
+                        </StackLayout>
+                    </ScrollView>
+                </GridCell>
+
+                <GridCell Row="6">
+                    <Button Text="Refresh" OnClick="@OnGetNewWeather" />
+                </GridCell>
+
+            </Contents>
+        </Grid>
     </PancakeView>
 </ContentPage>
 
