--- a/samples/BlazorNativeTodo/TodoApp.razor
+++ b/samples/BlazorNativeTodo/TodoApp.razor
@@ -1,4 +1,4 @@
-﻿<Shell>
+﻿<TabbedPage>
     <ContentPage Title="Todo">
         <StackLayout>
             <Label FontSize="20" TextColor="Color.Crimson" Text="Todo Items" HorizontalTextAlignment="TextAlignment.Center" />
@@ -11,4 +11,4 @@
     <ContentPage Title="About">
         <About />
     </ContentPage>
-</Shell>
+</TabbedPage>
