--- a/samples/BlazorNativeXaminals/BlazorNativeXaminals/AppShell.razor
+++ b/samples/BlazorNativeXaminals/BlazorNativeXaminals/AppShell.razor
@@ -1,46 +1,74 @@
-﻿<Shell>
-    <FlyoutItem Route="animals"
-                Title="Animals"
-                FlyoutDisplayOptions="@FlyoutDisplayOptions.AsMultipleItems">
-        <Tab Title="Domestic"
-             Route="domestic">
-            <ShellContent Route="cats"
-                          Title="Cats">
-                <CatsPage />
-            </ShellContent>
+﻿<Shell OnNavigated="@OnNavigated"
+       OnNavigating="@OnNavigating"
+       FlyoutBackgroundImage="@(new FileImageSource { File = "photo.jpg" })"
+       FlyoutBackgroundImageAspect="@Aspect.AspectFill"
+       FlyoutHeaderBehavior="@FlyoutHeaderBehavior.CollapseOnScroll">
+    <FlyoutHeader>
+        <XaminalsFlyoutHeader />
+    </FlyoutHeader>
 
-            <ShellContent Route="dogs"
-                          Title="Dogs">
+    <ChildContent>
+        <FlyoutItem Route="animals"
+                    Title="Animals"
+                    FlyoutDisplayOptions="@FlyoutDisplayOptions.AsMultipleItems">
+            <Tab Title="Domestic"
+                 Route="domestic"
+                 Icon="@(new FileImageSource { File="paw.png" })">
+                <ShellContent Route="cats"
+                              Title="Cats"
+                              Icon="@(new FileImageSource { File="cat.png" })">
+                    <CatsPage />
+                </ShellContent>
+
+                <ShellContent Route="dogs"
+                              Title="Dogs"
+                              Icon="@(new FileImageSource { File="dog.png" })">
+                    <DogsPage />
+                </ShellContent>
+            </Tab>
+
+            <ShellContent Route="monkeys"
+                          Title="Monkeys"
+                          Icon="@(new FileImageSource { File="monkey.png" })">
                 <DogsPage />
             </ShellContent>
-        </Tab>
 
-        <ShellContent Route="monkeys"
-                      Title="Monkeys">
+            <ShellContent Route="elephants"
+                          Title="Elephants"
+                          Icon="@(new FileImageSource { File="elephant.png" })">
+                <DogsPage />
+            </ShellContent>
+
+            <ShellContent Route="bears"
+                          Title="Bears"
+                          Icon="@(new FileImageSource { File="bear.png" })">
+                <DogsPage />
+            </ShellContent>
+        </FlyoutItem>
+
+        <ShellContent Route="about"
+                      Title="About"
+                      Icon="@(new FileImageSource { File="info.png" })">
             <DogsPage />
         </ShellContent>
 
-        <ShellContent Route="elephants"
-                      Title="Elephants">
-            <DogsPage />
-        </ShellContent>
-
-        <ShellContent Route="bears"
-                      Title="Bears">
-            <DogsPage />
-        </ShellContent>
-    </FlyoutItem>
-
-    <ShellContent Route="about"
-                  Title="About">
-        <DogsPage />
-    </ShellContent>
-
-    @*<MenuItem Text="Random"
-              IconImageSource="random.png"
-              Command="{Binding RandomPageCommand}" />
-    <MenuItem Text="Help"
-              IconImageSource="help.png"
-              Command="{Binding HelpCommand}"
-              CommandParameter="https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell" />*@
+        @*<MenuItem Text="Random"
+                      IconImageSource="random.png"
+                      Command="{Binding RandomPageCommand}" />
+            <MenuItem Text="Help"
+                      IconImageSource="help.png"
+                      Command="{Binding HelpCommand}"
+                      CommandParameter="https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell" />*@
+    </ChildContent>
 </Shell>
+
+@code
+{
+    void OnNavigated(ShellNavigatedEventArgs e)
+    {
+    }
+
+    void OnNavigating(ShellNavigatingEventArgs e)
+    {
+    }
+}
