--- a/samples/BlazorNativeXaminals/BlazorNativeXaminals/AppShell.razor
+++ b/samples/BlazorNativeXaminals/BlazorNativeXaminals/AppShell.razor
@@ -52,13 +52,12 @@
             <DogsPage />
         </ShellContent>
 
-        @*<MenuItem Text="Random"
-                      IconImageSource="random.png"
-                      Command="{Binding RandomPageCommand}" />
-            <MenuItem Text="Help"
-                      IconImageSource="help.png"
-                      Command="{Binding HelpCommand}"
-                      CommandParameter="https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell" />*@
+        <MenuItem Text="Random"
+                  IconImageSource="@(new FileImageSource { File="random.png" })"
+                  OnClick="@OnRandomClick" />
+        <MenuItem Text="Help"
+                  IconImageSource="@(new FileImageSource { File="help.png" })"
+                  OnClick="@OnHelpClick" />
     </ChildContent>
 </Shell>
 
@@ -70,5 +69,64 @@
 
     void OnNavigating(ShellNavigatingEventArgs e)
     {
+    }
+
+    protected override void OnInitialized()
+    {
+        RegisterRoutes();
+    }
+
+    void RegisterRoutes()
+    {
+        //routes.Add("monkeydetails", typeof(MonkeyDetailPage));
+        //routes.Add("beardetails", typeof(BearDetailPage));
+        //routes.Add("catdetails", typeof(CatDetailPage));
+        //routes.Add("dogdetails", typeof(DogDetailPage));
+        //routes.Add("elephantdetails", typeof(ElephantDetailPage));
+
+        foreach (var item in routes)
+        {
+            Routing.RegisterRoute(item.Key, item.Value);
+        }
+    }
+
+    Random rand = new Random();
+    Dictionary<string, Type> routes = new Dictionary<string, Type>();
+    public Dictionary<string, Type> Routes { get { return routes; } }
+
+    async Task OnRandomClick()
+    {
+        string destinationRoute = routes.ElementAt(rand.Next(0, routes.Count)).Key;
+        string animalName = null;
+
+        switch (destinationRoute)
+        {
+            case "monkeydetails":
+                //animalName = MonkeyData.Monkeys.ElementAt(rand.Next(0, MonkeyData.Monkeys.Count)).Name;
+                break;
+            case "beardetails":
+                //animalName = BearData.Bears.ElementAt(rand.Next(0, BearData.Bears.Count)).Name;
+                break;
+            case "catdetails":
+                //animalName = CatData.Cats.ElementAt(rand.Next(0, CatData.Cats.Count)).Name;
+                break;
+            case "dogdetails":
+                //animalName = DogData.Dogs.ElementAt(rand.Next(0, DogData.Dogs.Count)).Name;
+                break;
+            case "elephantdetails":
+                //animalName = ElephantData.Elephants.ElementAt(rand.Next(0, ElephantData.Elephants.Count)).Name;
+                break;
+        }
+
+        var currentShell = Xamarin.Forms.Shell.Current;
+        var state = currentShell.CurrentState;
+        await currentShell.GoToAsync($"{state.Location}/{destinationRoute}?name={animalName}");
+        currentShell.FlyoutIsPresented = false;
+    }
+
+    async Task OnHelpClick()
+    {
+        var helpUrl = "https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell";
+        await Launcher.OpenAsync(helpUrl);
     }
 }
