Add animal pages and About pages to Xaminals sample

--- a/samples/BlazorNativeXaminals/BlazorNativeXaminals/AppShell.razor
+++ b/samples/BlazorNativeXaminals/BlazorNativeXaminals/AppShell.razor
@@ -30,26 +30,26 @@
             <ShellContent Route="monkeys"
                           Title="Monkeys"
                           Icon="@(new FileImageSource { File="monkey.png" })">
-                <DogsPage />
+                <MonkeysPage />
             </ShellContent>
 
             <ShellContent Route="elephants"
                           Title="Elephants"
                           Icon="@(new FileImageSource { File="elephant.png" })">
-                <DogsPage />
+                <ElephantsPage />
             </ShellContent>
 
             <ShellContent Route="bears"
                           Title="Bears"
                           Icon="@(new FileImageSource { File="bear.png" })">
-                <DogsPage />
+                <BearsPage />
             </ShellContent>
         </FlyoutItem>
 
         <ShellContent Route="about"
                       Title="About"
                       Icon="@(new FileImageSource { File="info.png" })">
-            <DogsPage />
+            <AboutPage />
         </ShellContent>
 
         <MenuItem Text="Random"
