--- a/samples/BlazorNativeXaminals/BlazorNativeXaminals/DogsPage.razor
+++ b/samples/BlazorNativeXaminals/BlazorNativeXaminals/DogsPage.razor
@@ -1,3 +1,10 @@
 ﻿<ContentPage>
-    <Label Text="Woof" />
+    <ScrollView>
+        <StackLayout>
+            @foreach (var animal in BlazorNativeXaminals.Data.DogData.Dogs)
+            {
+                <AnimalTemplate Animal="@animal" />
+            }
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
