--- a/samples/BlazorNativeXaminals/BlazorNativeXaminals/_Imports.razor
+++ b/samples/BlazorNativeXaminals/BlazorNativeXaminals/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using Microsoft.Blazor.Native
+﻿@using BlazorNativeXaminals.Models
+@using Microsoft.Blazor.Native
 @using Microsoft.Blazor.Native.Elements
 @using Xamarin.Essentials
 @using Xamarin.Forms
