--- a/samples/BlazorNativeTodo/About.razor
+++ b/samples/BlazorNativeTodo/About.razor
@@ -1,56 +1,61 @@
 ﻿@using Xamarin.Essentials
 
 <StackLayout>
-    <StackLayout Orientation="StackOrientation.Horizontal">
-        @*<ContentView Padding="0,40,0,40" VerticalOptions="FillAndExpand">
-            <Image Source="xamarin_logo.png" VerticalOptions="Center" HeightRequest="64" />
-        </ContentView>*@
+    <StackLayout>
+        <StackLayout Orientation="StackOrientation.Horizontal"
+                     BackgroundColor="@primaryColor">
+            <ContentView Padding="@(new Thickness(0,40,0,40))" VerticalOptions="@LayoutOptions.FillAndExpand">
+                <Image Source="@(new FileImageSource{File = "xamarin_logo.png"})"
+                       VerticalOptions="@LayoutOptions.Center"
+                       HeightRequest="64" />
+            </ContentView>
+        </StackLayout>
     </StackLayout>
+    <ScrollView>
+        <StackLayout Orientation="StackOrientation.Vertical">
+            <Label FontSize="22">
+                <FormattedText>
+                    <FormattedString>
+                        <Spans>
+                            <Span Text="AppName" FontAttributes="FontAttributes.Bold" FontSize="22" />
+                            <Span Text=" " />
+                            <Span Text="1.0" TextColor="@lightTextColor" />
+                        </Spans>
+                    </FormattedString>
+                </FormattedText>
+            </Label>
+            <Label>
+                <FormattedText>
+                    <FormattedString>
+                        <Spans>
+                            <Span Text="This app is written in C# and native APIs using the" />
+                            <Span Text=" " />
+                            <Span Text="Xamarin Platform" FontAttributes="FontAttributes.Bold" />
+                            <Span Text="." />
+                        </Spans>
+                    </FormattedString>
+                </FormattedText>
+            </Label>
+            <Label>
+                <FormattedText>
+                    <FormattedString>
+                        <Spans>
+                            <Span Text="It shares code with its" />
+                            <Span Text=" " />
+                            <Span Text="iOS, Android, and Windows" FontAttributes="FontAttributes.Bold" />
+                            <Span Text=" " />
+                            <Span Text="versions." />
+                        </Spans>
+                    </FormattedString>
+                </FormattedText>
+            </Label>
+            <Button Text="Learn more"
+                    OnClick="@OpenWeb"
+                    BackgroundColor="@primaryColor"
+                    TextColor="Color.White" />
+        </StackLayout>
+    </ScrollView>
 </StackLayout>
-<ScrollView>
-    <StackLayout Orientation="StackOrientation.Vertical">
-        <Label FontSize="22">
-            <FormattedText>
-                <FormattedString>
-                    <Spans>
-                        <Span Text="AppName" FontAttributes="FontAttributes.Bold" FontSize="22" />
-                        <Span Text=" " />
-                        <Span Text="1.0" ForegroundColor="@lightTextColor" />
-                    </Spans>
-                </FormattedString>
-            </FormattedText>
-        </Label>
-        <Label>
-            <FormattedText>
-                <FormattedString>
-                    <Spans>
-                        <Span Text="This app is written in C# and native APIs using the" />
-                        <Span Text=" " />
-                        <Span Text="Xamarin Platform" FontAttributes="FontAttributes.Bold" />
-                        <Span Text="." />
-                    </Spans>
-                </FormattedString>
-            </FormattedText>
-        </Label>
-        <Label>
-            <FormattedText>
-                <FormattedString>
-                    <Spans>
-                        <Span Text="It shares code with its" />
-                        <Span Text=" " />
-                        <Span Text="iOS, Android, and Windows" FontAttributes="FontAttributes.Bold" />
-                        <Span Text=" " />
-                        <Span Text="versions." />
-                    </Spans>
-                </FormattedString>
-            </FormattedText>
-        </Label>
-        <Button Text="Learn more"
-                OnClick="@OpenWeb"
-                BackgroundColor="@primaryColor"
-                TextColor="Color.White" />
-    </StackLayout>
-</ScrollView>
 
 @code
 {
