--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/ElephantsPage.razor
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/ElephantsPage.razor
@@ -3,7 +3,7 @@
         <StackLayout>
             @foreach (var animal in MobileBlazorBindingsXaminals.Data.ElephantData.Elephants)
             {
-                <AnimalTemplate Animal="@animal" />
+                <AnimalTemplate Animal="animal" />
             }
         </StackLayout>
     </ScrollView>
