--- a/samples/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld/HelloWorld.razor
+++ b/samples/MobileBlazorBindingsHelloWorld/MobileBlazorBindingsHelloWorld/HelloWorld.razor
@@ -1,5 +1,5 @@
 ﻿<ContentPage>
-    <StackLayout Margin="@(new Thickness(20))">
+    <StackLayout Margin="new Thickness(20)">
 
         <Label Text="Hello, World!"
                FontSize="40" />
