--- a/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo/Counter.razor
+++ b/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo/Counter.razor
@@ -2,7 +2,7 @@
 
 <StackLayout>
     <Label FontSize="30" FontAttributes="FontAttributes.Italic" Text="@("You have pressed " + AppState.Counter + " times")" />
-    <Button Text="+1" OnClick="@HandleClick" />
+    <Button Text="+1" OnClick="HandleClick" />
 </StackLayout>
 
 @code {
