--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/AnimalTemplate.razor
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/AnimalTemplate.razor
@@ -1,27 +1,27 @@
-﻿<Grid Padding="@(new Thickness(10))">
+﻿<Grid Padding="new Thickness(10)">
     <Layout>
-        <RowDefinition GridUnitType="@GridUnitType.Auto" />
-        <RowDefinition GridUnitType="@GridUnitType.Auto" />
-        <ColumnDefinition GridUnitType="@GridUnitType.Auto" />
-        <ColumnDefinition GridUnitType="@GridUnitType.Auto" />
+        <RowDefinition GridUnitType="GridUnitType.Auto" />
+        <RowDefinition GridUnitType="GridUnitType.Auto" />
+        <ColumnDefinition GridUnitType="GridUnitType.Auto" />
+        <ColumnDefinition GridUnitType="GridUnitType.Auto" />
     </Layout>
     <Contents>
         <GridCell RowSpan="2">
-            <Image Source="@(new UriImageSource { Uri=new Uri(Animal.ImageUrl) })"
-                   Aspect="@Aspect.AspectFill"
+            <Image Source="new UriImageSource { Uri=new Uri(Animal.ImageUrl) }"
+                   Aspect="Aspect.AspectFill"
                    HeightRequest="60"
                    WidthRequest="60" />
         </GridCell>
 
         <GridCell Column="1">
             <Label Text="@Animal.Name"
-                   FontAttributes="@FontAttributes.Bold" />
+                   FontAttributes="FontAttributes.Bold" />
         </GridCell>
 
         <GridCell Row="1" Column="1">
             <Label Text="@Animal.Location"
-                   FontAttributes="@FontAttributes.Italic"
-                   VerticalOptions="@LayoutOptions.End" />
+                   FontAttributes="FontAttributes.Italic"
+                   VerticalOptions="LayoutOptions.End" />
         </GridCell>
     </Contents>
 </Grid>
