--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/MonkeysPage.razor
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/MonkeysPage.razor
@@ -3,7 +3,7 @@
         <StackLayout>
             @foreach (var animal in MobileBlazorBindingsXaminals.Data.MonkeyData.Monkeys)
             {
-                <AnimalTemplate Animal="@animal" />
+                <AnimalTemplate Animal="animal" />
             }
         </StackLayout>
     </ScrollView>
