--- a/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/XaminalsFlyoutHeader.razor
+++ b/samples/MobileBlazorBindingsXaminals/MobileBlazorBindingsXaminals/XaminalsFlyoutHeader.razor
@@ -1,17 +1,17 @@
 ﻿<ContentView HeightRequest="200">
-    <Grid BackgroundColor="@Color.Black">
+    <Grid BackgroundColor="Color.Black">
         <Contents>
             <GridCell>
-                @*// TODO: Set Aspect="@Aspect.AspectFill"*@
+                @*// TODO: Set Aspect="Aspect.AspectFill"*@
                 <Image Source="@(new FileImageSource { File = "xamarinstore.jpg" })"
                        Opacity="0.6" />
             </GridCell>
             <GridCell>
                 <Label Text="Animals"
-                       TextColor="@Color.White"
-                       FontAttributes="@FontAttributes.Bold"
-                       HorizontalTextAlignment="@TextAlignment.Center"
-                       VerticalTextAlignment="@TextAlignment.Center" />
+                       TextColor="Color.White"
+                       FontAttributes="FontAttributes.Bold"
+                       HorizontalTextAlignment="TextAlignment.Center"
+                       VerticalTextAlignment="TextAlignment.Center" />
             </GridCell>
         </Contents>
     </Grid>
