--- a/templates/MobileBlazorBindings-app/NewApp/Counter.razor
+++ b/templates/MobileBlazorBindings-app/NewApp/Counter.razor
@@ -1,11 +1,11 @@
-﻿<Frame CornerRadius="10" BackgroundColor="@Color.LightBlue">
+﻿<Frame CornerRadius="10" BackgroundColor="Color.LightBlue">
 
     <StackLayout Orientation="StackOrientation.Horizontal" HorizontalOptions="LayoutOptions.Center">
 
-        <Button Text="Increment" OnClick="IncrementCount" />
+        <Button Text="Increment" OnClick="@IncrementCount" />
 
         <Label Text="@("The button was clicked " + count + " times")"
-               FontAttributes="@FontAttributes.Bold"
+               FontAttributes="FontAttributes.Bold"
                VerticalTextAlignment="TextAlignment.Center" />
 
     </StackLayout>
