--- a/templates/MobileBlazorBindings-app/NewApp/HelloWorld.razor
+++ b/templates/MobileBlazorBindings-app/NewApp/HelloWorld.razor
@@ -1,5 +1,5 @@
 ﻿<ContentPage>
-    <StackLayout Margin="@(new Thickness(20))">
+    <StackLayout Margin="new Thickness(20)">
 
         <Label Text="Hello, World!"
                FontSize="40" />
