Fix incorrect Todo app code
IsEnabled was set to 'false', which due to a bug, never did anything, so the sample worked. The bug is now being fixed, so this bad code now works, and does the wrong thing. Oops.

--- a/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo/TodoEntry.razor
+++ b/samples/MobileBlazorBindingsTodoSample/MobileBlazorBindingsTodo/TodoEntry.razor
@@ -1,7 +1,7 @@
 ﻿@inject AppState AppState
 
 <StackLayout Orientation="StackOrientation.Horizontal">
-    <Switch @bind-IsToggled="Item.IsDone" IsEnabled="false" />
+    <Switch @bind-IsToggled="Item.IsDone" />
     <Label Text="@Item.Text"
            TextDecorations="(Item.IsDone ? TextDecorations.Strikethrough : TextDecorations.None)"
            HorizontalOptions="LayoutOptions.FillAndExpand" />
